# napari-accelerated-pixel-and-object-classification

./: .gitignore  MANIFEST.in  README.md  object_segmenter.cl  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: plugin_preview.yml  test_and_deploy.yml
.napari/: config.yml
napari_accelerated_pixel_and_object_classification/: __init__.py  _custom_table_row_classifier.py  _dock_widget.py  _function.py  _object_classification_widget.py  _object_custom_classifier.py  _object_merger.py  _surface_triangle_classifier.py  _utilities.py
napari_accelerated_pixel_and_object_classification/_tests/: test_function.py  test_functions.py  test_widgets.py
