[metadata]
name = napari-accelerated-pixel-and-object-classification
author = Robert Haase
author_email = robert.haase@tu-dresden.de
license = BSD-3
url = https://github.com/haesleinhuepf/napari-accelerated-pixel-and-object-classification
description = Pixel and label classification using OpenCL-based Random Forest Classifiers
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Framework :: napari
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-accelerated-pixel-and-object-classification/issues
    Documentation = https://github.com/haesleinhuepf/napari-accelerated-pixel-and-object-classification
    Source Code = https://github.com/haesleinhuepf/napari-accelerated-pixel-and-object-classification
    User Support = https://forum.image.sc/tag/clij

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    apoc>=0.8.0
    napari-tools-menu
    napari-time-slicer
    superqt


[options.entry_points] 
napari.plugin =
    napari-accelerated-pixel-and-object-classification = napari_accelerated_pixel_and_object_classification
